k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'

  name: mirror-ingress
  namespace: mirror
spec:
  rules:
  - host: mirror.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mirror-service
            port: 
              number: 8080
  tls:
  - hosts:
    - mirror.tino.sh
    secretName: mirror-tino-sh-tls
